fix: Make borderline on the main section visible

--- a/src/Pages/Main/Components/Feed/Feed.scss
+++ b/src/Pages/Main/Components/Feed/Feed.scss
@@ -7,7 +7,7 @@
   margin-top: 46px;
   margin-right: 38px;
   background-color: var(--color-light-white);
-  border: 1px solid var(--color-dark);
+  border: 1px solid var(--color-grey);
 }
 
 .account {
